--- a/C2F.html
+++ b/C2F.html
@@ -4,18 +4,12 @@
   <title>A First Program in JavaScript</title>
   <script type="text/javascript">
 
-
   var cTemp = prompt("Please enter Celsius");
-
-  if(cTemp == null){
-    close();
-  }
-
-
   document.writeln("<h1>Celsius " + cTemp + "°C convert to Fahrenheit is : "+ C2F(cTemp) +"°F</h1>")
 
-  function C2F(num){
-    return num * 9 / 5 + 32;
+
+  function C2F(cTemp){
+    return cTemp * 9 / 5 + 32;
   }
   </script>
 </head>
